# sg17_firmware

./: Config.in.devel  Makefile  README  TODO  cf-sg  config_sigrand  config_sviazinvest  config_zelax  mk-sg  mp  p  rules.mk
changelog/: ChangeLog.header  ChangeLog.ru.in
docs/: buildroot-documentation.html  stylesheet.css
openwrt-midge/: .config.cmd  .config.old  .config.test  .gitignore  .tmpconfig.h  003-usbfix-by-usamabinladen.patch  ChangeLog  ChangeLog.header  (+29 more)
openwrt-midge/package/drv-daa/drv_daa-1.0.2.0/src/: Makefile.am  Makefile.in  drv_daa_api.c  drv_daa_api.h  drv_daa_board_easy3201.c  drv_daa_board_easy3201.h  drv_daa_board_easy3332.c  drv_daa_board_easy3332.h  drv_daa_common.h  drv_daa_common_sm_ring.c  drv_daa_linux.c
openwrt-midge/package/drv-tapi/drv_tapi-3.6.1/: Makefile.am  Makefile.in  drv_tapi_version.h
openwrt-midge/package/drv-tapi/drv_tapi-3.6.1/doc/: doxyconfig  footer.html
openwrt-midge/package/drv-tapi/drv_tapi-3.6.1/include/: drv_tapi_event.h  drv_tapi_fxo_ll_interface.h  drv_tapi_kpi_io.h  drv_tapi_ll_interface.h  lib_bufferpool.h
openwrt-midge/package/drv-tapi/drv_tapi-3.6.1/src/: Makefile.am  drv_tapi.wpj  drv_tapi_common.c  drv_tapi_ioctl.h  drv_tapi_linux.c  drv_tapi_linux.h  drv_tapi_meter.c  drv_tapi_misc.c  drv_tapi_opcontrol.c  drv_tapi_qos.c  drv_tapi_tone.c
openwrt-midge/package/drv-tapi/drv_tapi-3.6.1/src/common/src/: sys_drv_defs.h  sys_drv_kthread_linux.h
openwrt-midge/package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/2cpe/: Makefile.am  Makefile.in  drv_vinetic.wpj  drv_vinetic_access.c  drv_vinetic_access.h  drv_vinetic_alm_cpe.h  drv_vinetic_api.c  drv_vinetic_bbd.c  drv_vinetic_bbd.h  drv_vinetic_gr909.c  drv_vinetic_host.h  drv_vinetic_hostapi.h  drv_vinetic_int.h
openwrt-midge/package/oem-voip/files/src/svd/src/: Makefile.am  sofia.h  svd.c  svd.h  svd_atab.c  svd_atab.h  svd_cfg.c  svd_cfg.h  svd_engine_if.c  svd_if.c  svd_if.h  svd_log.h  svd_server_if.c  svd_ua.c  svd_ua.h
openwrt-midge/package/oem-voip/files/src/svd/src/libab/: ab_api.h  ab_basic.c  ab_events.c  ab_line.c  ab_media.c  sgatab  tapi  vinetic
openwrt-midge/package/oem-voip/files/src/svd/src/sofia-sip/: msg_mime_protos.h  msg_protos.h  sip_hclasses.h  sip_protos.h  sofia_features.h  tags
openwrt-midge/package/sigrand-voip/files/src/svd/: ChangeLog  README  build.sh  clean_there  configure.ac
openwrt-midge/package/sigrand-voip/files/src/svd/src/: Makefile.am  sofia.h  svd.c  svd.h  svd_atab.c  svd_atab.h  svd_cfg.c  svd_cfg.h  svd_ua.c  svd_ua.h
openwrt-midge/package/sigrand-voip/files/src/svd/src/libab/: ab_api.h  ab_basic.c  ab_err.h  ab_events.c  ab_internal_v22.h  ab_line.c  ab_magic.h  ab_media.c  build.sh  sgatab  vinetic
openwrt-midge/package/sigrand-voip/files/src/svd/src/sofia-sip/: http_protos.h  http_tag.h  sip_tag.h  su_configure.h
package/drv-daa/drv_daa-1.0.2.0/: Makefile.am  Makefile.in  NEWS  README  configure  configure.in  drv_daa_version.h
package/drv-daa/drv_daa-1.0.2.0/doc/: doxyconfig
package/drv-daa/drv_daa-1.0.2.0/src/: Makefile.in  drv_daa.h  drv_daa_board_easy50712.c  drv_daa_board_easy50712.h  drv_daa_board_template.c  drv_daa_board_template.h  drv_daa_boards.h  drv_daa_common.c  drv_daa_common_priv.h  drv_daa_common_sm_apoh.c  drv_daa_common_sm_bat.c  drv_daa_common_sm_pol.c  drv_daa_linux.h
package/drv-tapi/drv_tapi-3.6.1/: Makefile.in  NEWS  README  aclocal.m4  configure  configure.in  drv_config.h.in
package/drv-tapi/drv_tapi-3.6.1/doc/: stylesheet.css
package/drv-tapi/drv_tapi-3.6.1/include/: drv_tapi_event_io.h  drv_tapi_io.h  drv_tapi_qos.h  ifx_udp_redirect.h
package/drv-tapi/drv_tapi-3.6.1/src/: Makefile.in  drv_api.h  drv_tapi.h  drv_tapi.wpj  drv_tapi_api.h  drv_tapi_cid.c  drv_tapi_cid.h  drv_tapi_dial.c  drv_tapi_errno.h  drv_tapi_event.c  drv_tapi_fxo.c  drv_tapi_init.c  drv_tapi_ioctl.c  drv_tapi_kpi.c  drv_tapi_kpi.h  drv_tapi_misc.c  drv_tapi_pcm.c  drv_tapi_polling.c  drv_tapi_polling.h  drv_tapi_qos.c  drv_tapi_ring.c  drv_tapi_stream.c  drv_tapi_stream.h  drv_tapi_voice.c  drv_tapi_vxworks.c  drv_tapi_vxworks.h  drv_tapi_vxworks_bsp.c
package/drv-tapi/drv_tapi-3.6.1/src/common/src/: sys_drv_fifo.c  sys_drv_kthread_linux.c  sys_drv_timerlib_vxworks.h
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/: LICENSE  Makefile.in  NEWS  configure.in
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/2cpe/: Makefile.in  drv_vinetic_alm_cpe.c  drv_vinetic_dcctl.h  drv_vinetic_gpio.c  drv_vinetic_host.c  drv_vinetic_hosttapi.c  drv_vinetic_int.c  drv_vinetic_polling.c
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/doc/: doxyconfig  stylesheet.css
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/include/: vinetic_io.h
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/lib_tapi/: lib_tapi_lt_vincpe.c
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/src/: drv_api.h  drv_vinetic_alm.c  drv_vinetic_alm_priv.h  drv_vinetic_api.h  drv_vinetic_basic.h  drv_vinetic_cod.c  drv_vinetic_cod_aal.c  drv_vinetic_cod_priv.h  drv_vinetic_con.c  drv_vinetic_con_priv.h  drv_vinetic_dspconf.c  drv_vinetic_gpio.h  drv_vinetic_init.c  drv_vinetic_init.h  drv_vinetic_linux.c  drv_vinetic_ll_if_version.h  drv_vinetic_main.c  drv_vinetic_misc.c  drv_vinetic_pcm.c  drv_vinetic_pcm.h  drv_vinetic_pcm_priv.h  drv_vinetic_qos.c  drv_vinetic_sig.c  drv_vinetic_sig.h  drv_vinetic_sig_cid.h  drv_vinetic_sig_dtmfg.c  drv_vinetic_sig_mftd.c  drv_vinetic_sig_priv.h  drv_vinetic_sig_utg.c  drv_vinetic_stream.h  drv_vinetic_vxworks.c  drv_vinetic_vxworks.h
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/src/common/src/: sys_drv_debug.c  sys_drv_debug.h  sys_drv_delaylib_vxworks.h  sys_drv_fifo.h  sys_drv_ifxos.h  sys_drv_kthread_linux.c  sys_drv_kthread_linux.h  sys_drv_timerlib_vxworks.c
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/src/lib/lib_bbd/src/: lib_bbd.c
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/src/lib/lib_bufferpool/: lib_bufferpool.c
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/src/lib/lib_fifo/: lib_fifo.c
package/drv-vinetic/drv_vinetic-1.3.1_tapi-3.6.1/src/mpc/src/: drv_mpc.h
(+1802 files in other folders)
