#                              Copyright (c) 2006
#                           Infineon Technologies AG
#                    Am Campeon 1-12; 81726 Munich, Germany
#
# THE DELIVERY OF THIS SOFTWARE AS WELL AS THE HEREBY GRANTED NON-EXCLUSIVE,
# WORLDWIDE LICENSE TO USE, COPY, MODIFY, DISTRIBUTE AND SUBLICENSE THIS
# SOFTWARE IS FREE OF CHARGE.
#
# THE LICENSED SOFTWARE IS PROVIDED "AS IS" AND INFINEON EXPRESSLY DISCLAIMS
# ALL REPRESENTATIONS AND WARRANTIES, WHETHER EXPRESS OR IMPLIED, INCLUDING
# WITHOUT LIMITATION, WARRANTIES OR REPRESENTATIONS OF WORKMANSHIP,
# MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, DURABILITY, THAT THE
# OPERATING OF THE LICENSED SOFTWARE WILL BE ERROR FREE OR FREE OF ANY THIRD
# PARTY CLAIMS, INCLUDING WITHOUT LIMITATION CLAIMS OF THIRD PARTY INTELLECTUAL
# PROPERTY INFRINGEMENT.
#
# EXCEPT FOR ANY LIABILITY DUE TO WILFUL ACTS OR GROSS NEGLIGENCE AND EXCEPT
# FOR ANY PERSONAL INJURY INFINEON SHALL IN NO EVENT BE LIABLE FOR ANY CLAIM
# OR DAMAGES OF ANY KIND, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
# ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
# DEALINGS IN THE SOFTWARE.


AC_REVISION($Revision: 1.9 $)

AC_INIT([IFX TAPI DAA plugin], [1.0.2.0], [Infineon Technologies AG], [drv_daa])

AM_INIT_AUTOMAKE

# save the configure arguments
CONFIGURE_OPTIONS="$ac_configure_args"
AC_SUBST(CONFIGURE_OPTIONS)

AC_CONFIG_HEADER(drv_config.h)

AC_PROG_CC
AC_PROG_INSTALL
AC_STDC_HEADERS
AC_PROG_RANLIB

AC_CONFIG_FILES([
   Makefile
   src/Makefile
])

AH_TOP(
[/******************************************************************************

                               Copyright (c) 2006
                            Infineon Technologies AG
                     Am Campeon 1-12; 81726 Munich, Germany

  THE DELIVERY OF THIS SOFTWARE AS WELL AS THE HEREBY GRANTED NON-EXCLUSIVE,
  WORLDWIDE LICENSE TO USE, COPY, MODIFY, DISTRIBUTE AND SUBLICENSE THIS
  SOFTWARE IS FREE OF CHARGE.

  THE LICENSED SOFTWARE IS PROVIDED "AS IS" AND INFINEON EXPRESSLY DISCLAIMS
  ALL REPRESENTATIONS AND WARRANTIES, WHETHER EXPRESS OR IMPLIED, INCLUDING
  WITHOUT LIMITATION, WARRANTIES OR REPRESENTATIONS OF WORKMANSHIP,
  MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE, DURABILITY, THAT THE
  OPERATING OF THE LICENSED SOFTWARE WILL BE ERROR FREE OR FREE OF ANY THIRD
  PARTY CLAIMS, INCLUDING WITHOUT LIMITATION CLAIMS OF THIRD PARTY INTELLECTUAL
  PROPERTY INFRINGEMENT.

  EXCEPT FOR ANY LIABILITY DUE TO WILFUL ACTS OR GROSS NEGLIGENCE AND EXCEPT
  FOR ANY PERSONAL INJURY INFINEON SHALL IN NO EVENT BE LIABLE FOR ANY CLAIM
  OR DAMAGES OF ANY KIND, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
  ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
  DEALINGS IN THE SOFTWARE.

 ******************************************************************************/
#ifndef _DRV_CONFIG_H_
#define _DRV_CONFIG_H_]
)

AH_BOTTOM([
#endif /* _DRV_CONFIG_H_ */
])

DEFAULT_BOARD_NAME='DRV_DAA_BOARD_EASY50712'
BOARD_NAME='DRV_DAA_BOARD_EASY50712'
AC_ARG_ENABLE(boardname,
   AC_HELP_STRING(
      [--enable-boardname=x],
      [set the target board, example EASY50712, EASY3332, EASY3201, TEMPLATE, your board]
   ),
   [
        if test -n $enableval; then
           AC_MSG_RESULT(setting board name $enableval)
           AC_SUBST([BOARD_NAME],[DRV_DAA_BOARD_$enableval])
        else
           AC_MSG_RESULT(setting default BOARD_NAME $DEFAULT_BOARD_NAME)
           AC_SUBST([BOARD_NAME],[$DEFAULT_BOARD_NAME])
        fi
   ]
)

DEFAULT_KERNEL_INCL_PATH='~/linux_danube/include'
AC_SUBST([KERNEL_INCL_PATH],[$DEFAULT_KERNEL_INCL_PATH])

AC_ARG_ENABLE(kernelincl,
   AC_HELP_STRING(
      [--enable-kernelincl=x],
      [set the target kernel include path]
   ),
   [
        if test -n $enableval; then
           AC_MSG_RESULT(setting kernel include path $enableval)
           AC_SUBST([KERNEL_INCL_PATH],[$enableval])
        else
           AC_MSG_RESULT(setting kernel include path to default $DEFAULT_KERNEL_INCL_PATH)
           AC_SUBST([KERNEL_INCL_PATH],[$DEFAULT_KERNEL_INCL_PATH])
        fi
   ],
   [
        AC_MSG_RESULT(setting kernel include path to default $DEFAULT_KERNEL_INCL_PATH)
   ]
)

DEFAULT_TAPI_INCL_PATH='/var/vob/comacsd/comacsd_driver/drv_tapi'
AC_SUBST([TAPI_INCL_PATH],[$DEFAULT_TAPI_INCL_PATH])

AC_ARG_ENABLE(tapiincl,
    AC_HELP_STRING(
        [--enable-tapiincl=x],
        [set the TAPI include path]
    ),
    [
        if test -n $enableval; then
            AC_MSG_RESULT(setting TAPI include path $enableval)
            AC_SUBST([TAPI_INCL_PATH], [$enableval])
        else
            AC_MSG_RESULT(setting default TAPI include path $DEFAULT_TAPI_INCL_PATH)
            AC_SUBST([TAPI_INCL_PATH], [$DEFAULT_TAPI_INCL_PATH])
        fi
    ],
    [
        AC_MSG_RESULT(setting TAPI include path to default $DEFAULT_TAPI_INCL_PATH)
    ]
)

DEFAULT_DUSLIC_INCL_PATH='/var/vob/comacsd/comacsd_driver/drv_duslic'
AC_SUBST([DUSLIC_INCL_PATH],[$DEFAULT_DUSLIC_INCL_PATH])

AC_ARG_ENABLE(duslicincl,
   AC_HELP_STRING(
      [--enable-duslicincl=x],
      [set the target duslic include path]
   ),
   [
        if test -n $enableval; then
            AC_MSG_RESULT(setting DuSLIC include path $enableval)
            AC_SUBST([DUSLIC_INCL_PATH],[$enableval])
        else
            AC_MSG_RESULT(setting DuSLIC include path to default $DEFAULT_DUSLIC_INCL_PATH)
            AC_SUBST([DUSLIC_INCL_PATH],[$DEFAULT_DUSLIC_INCL_PATH])
        fi
   ],
   [
        AC_MSG_RESULT(setting DuSLIC include path to default $DEFAULT_DUSLIC_INCL_PATH)
   ]
)


DEFAULT_VINETIC_INCL_PATH='/var/vob/comacsd/comacsd_driver/drv_peb3324/src'
AC_SUBST([VINETIC_INCL_PATH],[$DEFAULT_VINETIC_INCL_PATH])

AC_ARG_ENABLE(vineticincl,
   AC_HELP_STRING(
      [--enable-vineticincl=x],
      [set the target vinetic include path]
   ),
   [
        if test -n $enableval; then
           AC_MSG_RESULT(setting VINETIC include path $enableval)
           AC_SUBST([VINETIC_INCL_PATH],[$enableval])
        else
           AC_MSG_RESULT(setting VINETIC include path to default $DEFAULT_VINETIC_INCL_PATH)
           AC_SUBST([VINETIC_INCL_PATH],[$DEFAULT_VINETIC_INCL_PATH])
        fi
   ],
   [
        AC_MSG_RESULT(setting VINETIC include path to default $DEFAULT_VINETIC_INCL_PATH)
   ]
)

DEFAULT_DXT_INCL_PATH='/var/vob/comacsd/comacsd_driver/drv_dxt/src'
AC_SUBST([DXT_INCL_PATH],[$DEFAULT_DXT_INCL_PATH])

AC_ARG_ENABLE(dxtincl,
   AC_HELP_STRING(
      [--enable-dxtincl=x],
      [set the target duslic-xt include path]
   ),
   [
        if test -n $enableval; then
           AC_MSG_RESULT(setting DUSLIC-XT include path $enableval)
           AC_SUBST([DXT_INCL_PATH],[$enableval])
        else
           AC_MSG_RESULT(setting DUSLIC-XT include path to default $DEFAULT_DXT_INCL_PATH)
           AC_SUBST([DXT_INCL_PATH],[$DEFAULT_DXT_INCL_PATH])
        fi
   ],
   [
        AC_MSG_RESULT(setting DUSLIC-XT include path to default $DEFAULT_DXT_INCL_PATH)
   ]
)

dnl enable APOH (another phone offhook) feature
AC_ARG_ENABLE(apoh,
   AC_HELP_STRING(
      [--enable-apoh],
      [enable feature APOH (another phone off hook)]
    ),
   [
      if test "${enableval}" = 'yes'; then
         AC_SUBST([APOH_ENABLE],[$enableval])
         AC_MSG_RESULT(enabled APOH)
         AC_DEFINE([DAA_APOH],[1],[enable/disable APOH])
      else
         AC_MSG_RESULT(disabled APOH)
      fi
   ]
)

AM_CONDITIONAL(APOH, [test "$APOH_ENABLE" = yes ])

AM_CONDITIONAL(MIPS, false)

dnl set additional (device specific) CFLAGS
AC_ARG_WITH(cflags,
    AC_HELP_STRING(
        [--with-cflags=val],
        [pass additional (device specific) CFLAGS, not required for Linux 2.6]
    ),
    [
	    if test "$withval" = yes; then
		    AC_MSG_ERROR([Please provide a value for the maximum devices]);
	    fi
	    AC_MSG_RESULT([passing additional CFLAGS $withval])
        CFLAGS="$CFLAGS $withval"
    ]
)

AC_DEFINE_UNQUOTED([WITH_CLFAGS_CONFIGURE_OPTION],[$CFLAGS],[environment and device specific CFLAGS passed to configure])

## Target host specific compilation flags
#case "${host}" in
#   mips_fp_be)
#	CFLAGS="$CFLAGS -fno-strict-aliasing -fno-common -fomit-frame-pointer \
#         -G 0 -mno-abicalls -fno-pic -pipe -mtune=r4600 -mips2 -Wa,--trap \
#         -DMODVERSIONS"
#      ;;
#   mips-linux)
#	CFLAGS="$CFLAGS -fno-strict-aliasing -fno-common -fomit-frame-pointer\
#           -fno-pic -mno-abicalls -mlong-calls -mips32 -pipe -mtune=r4600\
#           -mips2 -mlong-calls -Wa,--trap -G 0 -DMODVERSIONS"
#	AM_CONDITIONAL(MIPS, true)
#      ;;
#   mipsel-linux)
#      CFLAGS="$CFLAGS -fno-strict-aliasing -fno-common -fomit-frame-pointer \
#         -mno-abicalls -fno-pic -pipe -mips2 -G 0 -Wa,--trap  -Wa,--trap \
#         -D__linux__ -D_MIPS_ISA=6 -D_MIPS_SZLONG=32 -D_MIPS_SZPTR=32 \
#         -D_MIPS_SZINT=32 -D__MIPSEL__ -DUTS_MACHINE='"mips"' -mlong-calls"
#      AM_CONDITIONAL(MIPS, true)
#      ;;
#   powerpc-linux-uclibc)
#      CFLAGS="$CFLAGS -fno-strict-aliasing -fno-common -fomit-frame-pointer"
#      ;;
#   *)
#      ;;
#esac

AC_OUTPUT

echo \
"------------------------------------------------------------------------
Configuration:

  Source code location: ${srcdir}
  Compiler:             ${CC}
  Compiler flags:       ${CFLAGS}
  Host System Type:     ${host}
  Install path:         ${prefix}
Settings:
  KERNEL_INCL_PATH:     ${KERNEL_INCL_PATH}
------------------------------------------------------------------------"
